--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,12 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">RestAssuredFramework</th></tr>
-<tr><td><a href="#t0">SIT</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">5,605</td><td></td><td></td></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">65</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">RestAssuredFramework</th></tr></tbody><tbody id="t0"><tr><th colspan="4">SIT &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">restFramework.Usercheck</td><td><a href="#m0">getEmployee</a></td><td rowspan="1">1609487889138</td><td rowspan="1">3214</td></tr><tr class="passedeven"><td><a href="#m1">getEmployeenegative</a></td><td rowspan="1">1609487892356</td><td rowspan="1">1046</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">getRequest.GetMethod</td><td><a href="#m0">get</a></td><td rowspan="1">1609917021820</td><td rowspan="1">14</td></tr></tbody>
 </table>
-<h2>SIT</h2><h3 id="m0">restFramework.Usercheck#getEmployee</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">restFramework.Usercheck#getEmployeenegative</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">getRequest.GetMethod#get</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
