--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ca907e">  <td>20/12/28 00:37:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Usercheck.setUP()[pri:0, instance:Usercheck@4e7dc304]">&gt;&gt;setUP</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1227074340</td>   <td></td> </tr>
-<tr bgcolor="ca907e">  <td>20/12/28 00:37:11</td>   <td>2041</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Usercheck.getEmployee()[pri:0, instance:Usercheck@4e7dc304]">getEmployee</td> 
-  <td>main@1227074340</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>21/01/06 12:40:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetMethod.get()[pri:0, instance:getRequest.GetMethod@3abbfa04]">get</td> 
+  <td>main@3213500</td>   <td></td> </tr>
 </table>
